vault_package/anchor_init.log
node:internal/modules/cjs/loader:1721
    throw err;
    ^

SyntaxError: /home/chris/krakenbot/pro/questakingpool/new_qup_staking/actual_idl.json: Unexpected token 'E', "Error: Acc"... is not valid JSON
    at parse (<anonymous>)
    at Object..json (node:internal/modules/cjs/loader:1718:39)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (/home/chris/krakenbot/pro/questakingpool/new_qup_staking/vault_package/anchor_init.js:17:13)
    at Module._compile (node:internal/modules/cjs/loader:1554:14)

Node.js v22.14.0
